--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <head>
 </head>
 <body>
+	<div id='hw1' bg-color = 'AAFFFF'>
 	<h1>Homework 1</h1>
-	<script type="text/javascript">
-		
-
-	</script>
-	<a href=""></a>>
+<script type="text/javascript">
+	for (var i = 1; i <= 14; i++) {
+var newa = document.createElement('a');
+newa.href = 'task1/zad' + i;
+newa.innerHTML = 'Задание ' + i;
+	hw1.appendChild(newa);
+	hw1.appendChild(document.createElement('br'));
+	}
+</script>
+</br>
+	</div>
 </body>	
