--- a/index.html
+++ b/index.html
@@ -2,15 +2,28 @@
 <head>
 </head>
 <body>
-	<div id='hw1' bg-color = 'AAFFFF'>
+	<div id='hw1' >
 	<h1>Homework 1</h1>
 <script type="text/javascript">
 	for (var i = 1; i <= 14; i++) {
 var newa = document.createElement('a');
-newa.href = 'task1/zad' + i;
+newa.href = 'task1/zad' + i+ '.html';
 newa.innerHTML = 'Задание ' + i;
 	hw1.appendChild(newa);
 	hw1.appendChild(document.createElement('br'));
+	}
+</script>
+</br>
+	</div>
+		<div id='hw2' >
+	<h1>Homework 2</h1>
+<script type="text/javascript">
+	for (var i = 1; i <= 4; i++) {
+var newa = document.createElement('a');
+newa.href = 'task2/zad2.' + i + '.html';
+newa.innerHTML = 'Задание ' + i;
+	hw2.appendChild(newa);
+	hw2.appendChild(document.createElement('br'));
 	}
 </script>
 </br>
