--- a/index.html
+++ b/index.html
@@ -28,4 +28,17 @@ newa.innerHTML = 'Задание ' + i;
 </script>
 </br>
 	</div>
+	<div id='hw2' >
+	<h1>Homework 3</h1>
+<script type="text/javascript">
+	for (var i = 1; i <= 10; i++) {
+var newa = document.createElement('a');
+newa.href = 'task3/zad3.' + i + '.html';
+newa.innerHTML = 'Задание ' + i;
+	hw2.appendChild(newa);
+	hw2.appendChild(document.createElement('br'));
+	}
+</script>
+</br>
+	</div>
 </body>	
