--- a/task1/zad1.html
+++ b/task1/zad1.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <body>
+	<label>  1.1. Составить программу, проверяющую, будут ли взаимно просты два натуральных (целых) числа.</label>
 	<input type="number" id ="n1">
 	<input type="number" id="n2">
 			<script type="text/javascript">
