--- a/task1/zad12.html
+++ b/task1/zad12.html
@@ -2,6 +2,8 @@
 <head>
 </head>
 <body>
+<label> Написать программу умножения (деления),сложения(вычитания) двух данных рациональных чисел. Ответ должен быть несократимой дробью.</label>
+<br/>
 	<table>
 		<tr>
 		<td>
