--- a/task1/zad2.html
+++ b/task1/zad2.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <body>
+	<label>1.2. Составить программу, проверяющую, будет ли простым данное натуральное число.</label>
 	<input type="number" id ="n1">
 			<script type="text/javascript">
 		function myfunc(){
