--- a/task1/zad4.html
+++ b/task1/zad4.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <body>
+	<label>1.4. Написать программу, которая выводит на экран первые N простых чисел.</label>
 	<input type="number" id ="n1">
 	<button onclick="myfunc()">check</button>
 
