--- a/task1/zad9.html
+++ b/task1/zad9.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <body>
+<label>1.9. Проверить, будет ли данное число числом Фибоначчи</label>
 	<input type="number" id ="n1">
 	<button onclick="myfunc()">check</button>
 
