--- a/task2/zad2.1.html
+++ b/task2/zad2.1.html
@@ -2,6 +2,8 @@
 <head>
 </head>
 <body>
+	<label>2.1. Используя методы строк charAt, split и toUpperCase, создайте функцию,  которая преобразует строку вида "background-color" в "backgroundColor",  т.е. удаляет знак "-" и преобразует последующую букву в заглавную. </label>
+	<br>
 	<input type="text" id ="n1">
 	<button onclick="myfunc()">check</button>
 
