--- a/task2/zad2.2.html
+++ b/task2/zad2.2.html
@@ -2,6 +2,8 @@
 <head>
 </head>
 <body>
+<label>2.2. Задан массив [9,8,7,6,5,4,3,2,1]. Создайте две копии данного массива разными способами и поменяйте в них порядок на обратный так же двумя способами. Выведите все три массива.
+</label>
 	<button onclick="myfunc()">check</button>
 
 			<script type="text/javascript">
