--- a/task2/zad2.3.html
+++ b/task2/zad2.3.html
@@ -2,6 +2,9 @@
 <head>
 </head>
 <body>
+<label>2.3. Используя ассоциативный массив, создайте функцию для перевода заданной строки на необходимый язык. Переводимые слова и фразы ограничены заданным набором (для примера 4 слова).
+</label>
+<br>
 	<button onclick="myfunc()">check</button>
 	<input type="text" id ="n1">
 
