--- a/task2/zad2.4.html
+++ b/task2/zad2.4.html
@@ -2,6 +2,9 @@
 <head>
 </head>
 <body>
+<label>
+2.4. Создайте объект с днями недели. Ключами в нем должны служить номера дней от начала недели (понедельник - первый и т.д.). Выведете текущий день недели.</label>
+<br>
 	<button onclick="myfunc()">check</button>
 
 			<script type="text/javascript">
