--- a/task2/zad2.5.html
+++ b/task2/zad2.5.html
@@ -2,6 +2,9 @@
 <head>
 </head>
 <body>
+<label>2.5. Создайте объект "персонал", содержащий должности и имена. Скопируйте его в объект "персонал 2" и поменяйте в нем имена. Выведите оба объекта, предварительно преобразовав их в строку и используя знаки переноса строки. 
+</label>
+<br>
 	<ol id = 'dd'>	
 	</ol>
 
