--- a/task2/zad2.7.html
+++ b/task2/zad2.7.html
@@ -2,6 +2,8 @@
 <head>
 </head>
 <body onload="">
+<label>2.7.  Создайте объект "предметы", со свойством, в котором через запятую перечислены предметы, преподаваемые в университете/школе(перечислите 2-6). Напишите к нему функцию, которая будет добавлять предмет, если его еще там нет. Используйте для этого преобразование в массив и свойства массивов split, join, push. </label>
+<br>
 	<input type="text" id ="add">
 	<button onclick="but()">push</button>
 	<label id ="lst"></label> 
