--- a/task1/zad10.html
+++ b/task1/zad10.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <body>
+	<label>Вычислить (N)!!</label>
 	<input type="number" id ="n1">
 	<button onclick="myfunc()">check</button>
 
