--- a/task1/zad11.html
+++ b/task1/zad11.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <body>
+<label>Найти все различные пифагоровы тройки из интервала от N до М.</label>
 	<input type="number" id ="n1">
 	<input type="number" id ="n2">
 	<button onclick="myfunc()">check</button>
