--- a/task1/zad13.html
+++ b/task1/zad13.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <body>
+<label>1.14. Найти все целые числа из интервала от N до M, которые делятся на каждую из своих цифр.</label>
 	<input type="number" id ="n1">
 	<input type="number" id ="n2">
 	<button onclick="myfunc()">check</button>
