--- a/task1/zad3.html
+++ b/task1/zad3.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <body>
+	<label>1.3. Напишите программу, которая выводит на экран все простые числа из интервала 1..N, используя решето Эратосфена.</label>
 	<input type="number" id ="n1">
 	<button onclick="myfunc()">check</button>
 
