--- a/task1/zad5.html
+++ b/task1/zad5.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <body>
+<label>1.5. Найти все делители натурального числа N.</label>
 	<input type="number" id ="n1">
 	<button onclick="myfunc()">check</button>
 
