--- a/task1/zad6.html
+++ b/task1/zad6.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <body>
+<label>1.6. Разложить целое число на простые множители. Вывести на экран все простые множители (в порядке возрастания) и их порядки.</label>
 	<input type="number" id ="n1">
 	<button onclick="myfunc()">check</button>
 
