--- a/task1/zad7.html
+++ b/task1/zad7.html
@@ -2,6 +2,9 @@
 <head>
 </head>
 <body>
+<label>1.7.  Натуральное число называется совершенным, если оно равно сумме всех 
+своих делителей, включая единицу. Вывести первые N (N<5) совершенных 
+чисел на экран.</label>
 	<input type="number" id ="n1">
 	<button onclick="myfunc()">check</button>
 
