--- a/task1/zad8.html
+++ b/task1/zad8.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <body>
+<label>1.8. Проверить, какие нечетные натуральные числа из интервала N..M можно представить в виде суммы трех простых чисел.</label>
 	<input type="number" id ="n1">
 	<input type="number" id ="n2">
 	<button onclick="myfunc()">check</button>
