--- a/task3/zad3.1.html
+++ b/task3/zad3.1.html
@@ -1,6 +1,7 @@
 <!Doctype HTML>
 <head>
 </head>
+<label>Создать web-страницу, в которой отображается календарь на текущий месяц в виде таблицы.</label>
 <table id='tab'>
 	
 </table>
